date picker alignment issue

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/helper.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/helper.css
@@ -351,3 +351,6 @@ a:active {
 	font-weight: bold;
 	margin-left: 10px;
 }
+.summaryDeliveryMode img.ui-datepicker-trigger{
+vertical-align:middle; 
+}
